updated carousel, it is now working, images are now in one line but spacing and size still needs to be fixed

--- a/src/css/topShowCarousel.css
+++ b/src/css/topShowCarousel.css
@@ -2,7 +2,8 @@
     background-color: rgb(22, 22, 22);
 }
 
-.testImg {
+img {
     display: block;
-    max-width: 500px;
+    max-width: 20vw;
+    position: relative;
 }
